--- a/scss/kalkulator.scss
+++ b/scss/kalkulator.scss
@@ -10,108 +10,152 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to right, #fcb69f , #ffecd2);
+    background: rgb(221, 221, 221);
 }
 
-.row {
-    &:after {
-        content: "";
-        display: block;
-        clear: both;
-    }
-}
-
-.column {
-    margin: 0 10%;
-    float: left;
-    min-height: 1px;
-    width: 500px;
-}
-
-.calculator {
-    width: 100%;
-    margin-top: 5vw;
+section.calculator {
+    display: flex;
+    justify-content: center;
+    padding-top: 8vh;
 }
 
 #calculator__wrapper {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 600px;
-    background-image: linear-gradient(#93a5cf , #13547a);
-    padding-top: 1%;
-    min-height: 500px; 
-    
-    %result-style {
-        background-color: rgb(218, 218, 236);        
-        width: 470px;
-        margin: 0 auto;
-        text-align: right;
-        overflow: hidden;
-        border-left: 2px solid #09203f;
-        border-right: 2px solid #09203f;
-    }
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    background-image: linear-gradient(#13547a, #93a5cf);
+    min-height: 500px;
+    min-width: 500px;
+    border-radius: 10px;
+    padding: 0 5px 5px 5px;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.6);
 
     #result {
-        border-bottom: 2px solid #09203f;
-        font-size: 36px;
-        min-height: 50px;
-        @extend %result-style;
+        grid-column: 1/-1;
+        display: flex;
+        font-size: 4.2rem;
+        justify-content: end;
+        align-items: center;
+        padding-right: 10px;
+        background-color: rgba(129, 173, 199, 0.6);
+        margin: 5px;
+        border-radius: 10px;
     }
 
-    #previous__result {
-        border-top: 2px solid #09203f;
-        font-size: 18px;
-        min-height: 25px;
-        color: rgba(0, 0, 0, 0.6);
-        @extend %result-style;        
+    button {
+        
+        font-size: 4.2rem;
+
+        &:hover {
+            border: 2px solid #09203f;
+        }
+    
+        &:active {
+            background-color: #1874CD;
+            color: white;
+        }
+    }
+
+    #n7 {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    #n8 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+    #n9 {
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+
+    #n4 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    #n5 {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+
+    #n6 {
+        grid-column: 3/4;
+        grid-row: 3/4;
+    }
+
+    #n1 {
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+
+    #n2 {
+        grid-column: 2/3;
+        grid-row: 4/5;
+    }
+
+    #n3 {
+        grid-column: 3/4;
+        grid-row: 4/5;
+    }
+
+    #n0 {
+        grid-column: 1/3;
+        grid-row: 5/6;
+    }
+
+    #reset {
+        grid-column: 4/5;
+        grid-row: 2/3;
+    }
+
+    #backspace {
+        grid-column: 5/6;
+        grid-row: 2/3;
+    }
+
+    #minus {
+        grid-column: 4/5;
+        grid-row: 3/4;
+    }
+
+    #multiply {
+        grid-column: 5/6;
+        grid-row: 3/4;
+    }
+
+    #plus {
+        grid-column: 4/5;
+        grid-row: 4/5;
+    }
+
+    #division {
+        grid-column: 5/6;
+        grid-row: 4/5;
+    }
+
+    #point {
+        grid-column: 3/4;
+        grid-row: 5/6;
+    }
+
+    #equal {
+        grid-column: 4/6;
+        grid-row: 5/6;
     }
 }
 
-#calculator__wrapper button {
-    font-size: 4.2rem;
-    width: 85px;
-    height: 85px;
-    display: inline-block;
-    margin: 1%;
-
-    &:hover {
-        border: 2px solid #09203f;
-    }
-
-    &:active {
-        background-color: #1874CD;
-        color: white;
-    }
-}
-
-.empty {
-    width: 85px;
-    height: 85px;
-    display: inline-block;
-    margin: 1%;    
-    color: transparent;
-}
-
-.column > #answer {
-    width: 182.5px;
-}
-
-@media screen and (max-width: 599px) {
+@media (max-width: 576px) {
     #calculator__wrapper {
-        width: 100%;
-        #result, #previous__result {
-            width: 78.33vw;
-            min-width: 350px;
-        }
-        button {
-            width: 14.16vw;
-            min-width: 60px;
-            height: 14.16vw;
-            min-height: 60px;
-        }
-    }
-    .column > #answer {
-        width: 30.416vw;     
-    }
+        min-height: 400px;
+        min-width: 400px;
 
+        button, #result {
+            font-size: 3.6rem;
+        }
+    }
 }
